--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,10 @@
         android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.activities.InsertGig"
-            android:parentActivityName=".views.activities.DashboardActivity"
-            >
-
-        </activity>
+        <activity android:name=".views.activities.ViewGig"></activity>
+        <activity
+            android:name=".views.activities.InsertGig"
+            android:parentActivityName=".views.activities.DashboardActivity"></activity>
         <activity android:name=".views.activities.VerifyOTP" />
         <activity android:name=".views.activities.SignUp" />
         <activity android:name=".views.activities.Login" />
@@ -41,9 +40,9 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 </manifest>
